SASS and CSS testing

--- a/product.html
+++ b/product.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <head>
     <title>Herbalife GREEN MAX</title>
+    <link rel="stylesheet" href="styles/max-life.css">
 </head>
 <body>
     <div>
         <div class="product-main">
             <div class="product-main__product-image">
                 <div class="product-main__can-lid">
-                    <img src="img/can-lid.png" alt="Крышка от банки">
+                    <img src="img/can/can-lid.png" alt="Крышка от банки">
                 </div>
                 <div class="product-main__can-body">
-                    <img src="img/can-body.png" alt="Банка">
+                    <img src="img/can/can-body.png" alt="Банка">
                 </div>
             </div>
             <div class="product-main__description">
