First page done

--- a/product.html
+++ b/product.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <head>
     <title>Herbalife GREEN MAX</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="styles/max-life.css">
+    <script src="css/page-wrapper/product-main/__product-image/product-main__product-image.js"></script>
 </head>
 <body>
-    <div>
+    <div class="page-wrapper">
         <div class="product-main">
             <div class="product-main__product-image">
                 <div class="product-main__can-lid">
@@ -21,8 +23,13 @@
                 <div class="product-main__comment">
                     <p>Открой и увидишь своими глазами!</p>
                 </div>
-                <div class="product-main__button">
-
+                <div class="product-main__notification">
+                    <div class="product-main__arrow">
+                        <img src="img/arrow.png" alt="Стрелка указывающая на продукт">
+                    </div>
+                    <div class="product-main__text">
+                        <p>Нажми на банку</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -34,19 +41,19 @@
             </div>
             <div class="links__socials">
                 <a href="" class="links__socials-item">
-                    <img src="img/facebook.png" alt="">
+                    <img src="img/Facebook_white.png" alt="">
                 </a>
                 <a href="" class="links__socials-item">
-                    <img src="img/vk.png" alt="">
+                    <img src="img/VK_white.png" alt="">
                 </a>
                 <a href="" class="links__socials-item">
-                    <img src="img/mates.png" alt="">
+                    <img src="img/OK_white.png" alt="">
                 </a>
                 <a href="" class="links__socials-item">
-                    <img src="img/instagram.png" alt="">
+                    <img src="img/Instagram_white.png" alt="">
                 </a>
                 <a href="" class="links__socials-item">
-                    <img src="img/youtube.png" alt="">
+                    <img src="img/youtube_white.png" alt="">
                 </a>
             </div>
         </div>
