--- a/product.html
+++ b/product.html
@@ -57,5 +57,37 @@
                 </a>
             </div>
         </div>
+        <div class="presentation">
+            <div class="presentation__video">
+                <video src="video.mp4"></video>
+            </div>
+            <div class="presentation__navigation">
+                <div class="presentation__to-ingredients">
+                    <img src="img/repeat.png" alt="Вернуться к ингридиентам">
+                    <h2>К ИНГРИДИЕНТАМ</h2>
+                </div>
+                <div class="presentation__to-main-page">
+                    <img src="img/back.png" alt="Вернуться на главную">
+                    <h3>Вернуться на Гербаленд</h3>
+                </div>
+            </div>
+            <div class="presentation__socials">
+                <a href="" class="presentation__socials-item">
+                    <img src="img/share.png" alt="Поделиться">
+                </a>
+                <a href="" class="presentation__socials-item">
+                    <img src="img/Facebook_black" alt="Поделиться через Фейсбук">
+                </a>
+                <a href="" class="presentation__socials-item">
+                    <img src="img/VK_black" alt="Поделиться через Вконтакте">
+                </a>
+                <a href="" class="presentation__socials-item">
+                    <img src="img/OK_black" alt="Поделиться через Одноклассники">
+                </a>
+                <a href="" class="presentation__socials-item">
+                    <img src="img/Twitter_black" alt="Поделиться через Твиттер">
+                </a>
+            </div>
+        </div>
     </div>
 </body>
