--- a/product.html
+++ b/product.html
@@ -3,90 +3,107 @@
     <title>Herbalife GREEN MAX</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/max-life.css">
-    <script src="css/page-wrapper/product-main/__product-image/product-main__product-image.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://www.youtube.com/player_api"></script>
+    <script src="css/page-wrapper/product/product-main/__product-image/product-main__product-image.js"></script>
 </head>
 <body>
     <div class="page-wrapper">
-        <div class="product-main">
-            <div class="product-main__product-image">
-                <div class="product-main__can-lid">
-                    <img src="img/can/can-lid.png" alt="Крышка от банки">
+        <div class="product">
+            <div class="product-main">
+                <div class="product-main__product-image">
+                    <div class="product-main__can-lid">
+                        <img src="img/can/can-lid.png" alt="Крышка от банки">
+                    </div>
+                    <div class="product-main__can-body">
+                        <img src="img/can/can-body.png" alt="Банка">
+                    </div>
                 </div>
-                <div class="product-main__can-body">
-                    <img src="img/can/can-body.png" alt="Банка">
+                <div class="product-main__description">
+                    <div class="product-main__title">
+                        <h1>Что такое Herbalife Green Max?</h1>
+                    </div>
+                    <div class="product-main__comment">
+                        <p>Открой и увидишь своими глазами!</p>
+                    </div>
+                    <div class="product-main__notification">
+                        <div class="product-main__arrow">
+                            <img src="img/arrow.png" alt="Стрелка указывающая на продукт">
+                        </div>
+                        <div class="product-main__text">
+                            <p>Нажми на банку</p>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="product-main__description">
-                <div class="product-main__title">
-                    <h1>Что такое Herbalife Green Max?</h1>
+            <div class="links">
+                <div class="links__logo-content">
+                    <a href="https://herbalife.ru" class="links__logo">
+                        <img src="img/logo.png" alt="Логотип Herbalife" class="icon">
+                    </a>
                 </div>
-                <div class="product-main__comment">
-                    <p>Открой и увидишь своими глазами!</p>
-                </div>
-                <div class="product-main__notification">
-                    <div class="product-main__arrow">
-                        <img src="img/arrow.png" alt="Стрелка указывающая на продукт">
-                    </div>
-                    <div class="product-main__text">
-                        <p>Нажми на банку</p>
-                    </div>
+                <div class="links__socials">
+                    <a href="" class="links__socials-item">
+                        <img src="img/socials/black/Facebook_black.png" alt="">
+                    </a>
+                    <a href="" class="links__socials-item">
+                        <img src="img/socials/black/VK_black.png" alt="">
+                    </a>
+                    <a href="" class="links__socials-item">
+                        <img src="img/socials/black/OK_black.png" alt="">
+                    </a>
+                    <a href="" class="links__socials-item">
+                        <img src="img/socials/black/Instagram_black.png" alt="">
+                    </a>
+                    <a href="" class="links__socials-item">
+                        <img src="img/socials/black/youtube_black.png" alt="">
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="links">
-            <div class="links__logo-content">
-                <a href="https://herbalife.ru" class="links__logo">
-                    <img src="img/logo.png" alt="Логотип Herbalife" class="icon">
-                </a>
-            </div>
-            <div class="links__socials">
-                <a href="" class="links__socials-item">
-                    <img src="img/Facebook_white.png" alt="">
-                </a>
-                <a href="" class="links__socials-item">
-                    <img src="img/VK_white.png" alt="">
-                </a>
-                <a href="" class="links__socials-item">
-                    <img src="img/OK_white.png" alt="">
-                </a>
-                <a href="" class="links__socials-item">
-                    <img src="img/Instagram_white.png" alt="">
-                </a>
-                <a href="" class="links__socials-item">
-                    <img src="img/youtube_white.png" alt="">
-                </a>
-            </div>
-        </div>
-        <div class="presentation">
+    </div>
+    <div class="presentation">
+        <div class="presentation-main">
             <div class="presentation__video">
-                <video src="video.mp4"></video>
+                <div id="player"></div>
+                <script src="css/presentation/presentation-main/__video/presentation__video.js"></script>
             </div>
-            <div class="presentation__navigation">
-                <div class="presentation__to-ingredients">
-                    <img src="img/repeat.png" alt="Вернуться к ингридиентам">
-                    <h2>К ИНГРИДИЕНТАМ</h2>
+            <div class="presentation__popup-menu">
+                <div class="presentation__navigation">
+                    <div class="presentation__to-ingredients">
+                        <div class="presentation__repeat">
+                            <img src="img/repeat.png" alt="Вернуться к ингридиентам">
+                        </div>
+                        <div class="presentation__repeat-title">
+                            <h2>К ИНГРИДИЕНТАМ</h2>
+                        </div>
+                    </div>
+                    <div class="presentation__to-main-page">
+                        <div class="presentation__back">
+                            <img src="img/back.png" alt="Вернуться на главную">
+                        </div>
+                        <div class="presentation__back-title">
+                            <h3>Вернуться на Гербаленд</h3>
+                        </div>
+                    </div>
                 </div>
-                <div class="presentation__to-main-page">
-                    <img src="img/back.png" alt="Вернуться на главную">
-                    <h3>Вернуться на Гербаленд</h3>
+                <div class="presentation__socials">
+                    <a href="" class="presentation__socials-item">
+                        <img src="img/share.png" alt="Поделиться">
+                    </a>
+                    <a href="" class="presentation__socials-item">
+                        <img src="img/socials/white/Facebook_white.png" alt="Поделиться через Фейсбук">
+                    </a>
+                    <a href="" class="presentation__socials-item">
+                        <img src="img/socials/white/VK_white.png" alt="Поделиться через Вконтакте">
+                    </a>
+                    <a href="" class="presentation__socials-item">
+                        <img src="img/socials/white/OK_white.png" alt="Поделиться через Одноклассники">
+                    </a>
+                    <a href="" class="presentation__socials-item">
+                        <img src="img/socials/white/Twitter_white.png" alt="Поделиться через Твиттер">
+                    </a>
                 </div>
-            </div>
-            <div class="presentation__socials">
-                <a href="" class="presentation__socials-item">
-                    <img src="img/share.png" alt="Поделиться">
-                </a>
-                <a href="" class="presentation__socials-item">
-                    <img src="img/Facebook_black" alt="Поделиться через Фейсбук">
-                </a>
-                <a href="" class="presentation__socials-item">
-                    <img src="img/VK_black" alt="Поделиться через Вконтакте">
-                </a>
-                <a href="" class="presentation__socials-item">
-                    <img src="img/OK_black" alt="Поделиться через Одноклассники">
-                </a>
-                <a href="" class="presentation__socials-item">
-                    <img src="img/Twitter_black" alt="Поделиться через Твиттер">
-                </a>
             </div>
         </div>
     </div>
