--- a/product.html
+++ b/product.html
@@ -67,6 +67,7 @@
             <div class="presentation__video">
                 <div id="player"></div>
                 <script src="css/presentation/presentation-main/__video/presentation__video.js"></script>
+                <iframe width="100%" height="1080px" src="https://www.youtube.com/embed/rhUSXegw6NY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="presentation__popup-menu">
                 <div class="presentation__navigation">
