--- a/product.html
+++ b/product.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Herbalife GREEN MAX</title>
+    <title>Грин Макс Select</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles/max-life.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -62,13 +62,13 @@
             </div>
         </div>
     </div>
-    <div class="presentation">
+    <div class="presentation presentation--hidden">
         <div class="presentation-main">
             <div class="presentation__video">
                 <div id="player"></div>
                 <script src="css/presentation/presentation-main/__video/presentation__video.js"></script>
             </div>
-            <div class="presentation__popup-menu">
+            <div class="presentation__popup-menu presentation__popup-menu--hidden">
                 <div class="presentation__navigation">
                     <div class="presentation__to-ingredients">
                         <div class="presentation__repeat">
