--- a/product.html
+++ b/product.html
@@ -6,6 +6,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://www.youtube.com/player_api"></script>
     <script src="css/page-wrapper/product/product-main/__product-image/product-main__product-image.js"></script>
+    <script src="css/presentation/presentation-main/__to-ingredients/presentation__to-ingredients.js"></script>
 </head>
 <body>
     <div class="page-wrapper">
