--- a/product.html
+++ b/product.html
@@ -84,7 +84,9 @@
                             <img src="img/back.png" alt="Вернуться на главную">
                         </div>
                         <div class="presentation__back-title">
-                            <h3>Вернуться на Гербаленд</h3>
+                            <a href="https://herbalifeacademy.ru" class="link">
+                                <h3>Вернуться на Гербаленд</h3>
+                            </a>
                         </div>
                     </div>
                 </div>
