--- a/product.html
+++ b/product.html
@@ -7,6 +7,7 @@
     <script src="https://www.youtube.com/player_api"></script>
     <script src="css/page-wrapper/product/product-main/__product-image/product-main__product-image.js"></script>
     <script src="css/presentation/presentation-main/__to-ingredients/presentation__to-ingredients.js"></script>
+    <script src="css/presentation/presentation-main/__video/presentation__video.js"></script>
 </head>
 <body>
     <div class="page-wrapper">
@@ -22,7 +23,7 @@
                 </div>
                 <div class="product-main__description">
                     <div class="product-main__title">
-                        <h1>Что такое Herbalife Green Max?</h1>
+                        <h1>Что такое ГРИН МАКС Select?</h1>
                     </div>
                     <div class="product-main__comment">
                         <p>Открой и увидишь своими глазами!</p>
@@ -67,7 +68,6 @@
         <div class="presentation-main">
             <div class="presentation__video">
                 <div id="player"></div>
-                <script src="css/presentation/presentation-main/__video/presentation__video.js"></script>
             </div>
             <div class="presentation__popup-menu presentation__popup-menu--hidden">
                 <div class="presentation__navigation">
