--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles/max-life.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://www.youtube.com/player_api"></script>
+    <script src="css/powder/__canvas/powder__canvas.js"></script>
     <script src="css/page-wrapper/product/product-main/__product-image/product-main__product-image.js"></script>
     <script src="css/presentation/presentation-main/__to-ingredients/presentation__to-ingredients.js"></script>
     <script src="css/presentation/presentation-main/__video/presentation__video.js"></script>
@@ -45,24 +46,27 @@
                     </a>
                 </div>
                 <div class="links__socials">
-                    <a href="" class="links__socials-item">
+                    <a href="https://www.facebook.com/HerbalifeRSM" class="links__socials-item">
                         <img src="img/socials/black/Facebook_black.png" alt="">
                     </a>
-                    <a href="" class="links__socials-item">
+                    <a href="https://vk.com/herbalifeofficial" class="links__socials-item">
                         <img src="img/socials/black/VK_black.png" alt="">
                     </a>
-                    <a href="" class="links__socials-item">
+                    <a href="https://ok.ru/herbalifeofficial" class="links__socials-item">
                         <img src="img/socials/black/OK_black.png" alt="">
                     </a>
-                    <a href="" class="links__socials-item">
+                    <a href="https://www.instagram.com/herbalife_rsm/" class="links__socials-item">
                         <img src="img/socials/black/Instagram_black.png" alt="">
                     </a>
-                    <a href="" class="links__socials-item">
+                    <a href="https://www.youtube.com/user/HerbalifeRus" class="links__socials-item">
                         <img src="img/socials/black/youtube_black.png" alt="">
                     </a>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="powder">
+        <canvas class="powder__canvas powder__canvas--hidden"></canvas>
     </div>
     <div class="presentation presentation--hidden">
         <div class="presentation-main">
@@ -94,16 +98,16 @@
                     <a href="" class="presentation__socials-item">
                         <img src="img/share.png" alt="Поделиться">
                     </a>
-                    <a href="" class="presentation__socials-item">
+                    <a href="http://www.facebook.com/sharer/sharer.php?s=100&p%5Btitle%5D=TITLE&p%5Bsummary%5D=DESC&p%5Burl%5D=URL&p%5Bimages%5D%5B0%5D=IMG_PATH" target="_blank" onclick="return Share.me(this);" class="presentation__socials-item">
                         <img src="img/socials/white/Facebook_white.png" alt="Поделиться через Фейсбук">
                     </a>
-                    <a href="" class="presentation__socials-item">
+                    <a href="http://vk.com/share.php?url=URL&title=TITLE&description=DESC&image=IMG_PATH&noparse=true" target="_blank" onclick="return Share.me(this);" class="presentation__socials-item">
                         <img src="img/socials/white/VK_white.png" alt="Поделиться через Вконтакте">
                     </a>
-                    <a href="" class="presentation__socials-item">
+                    <a href="http://www.odnoklassniki.ru/dk?st.cmd=addShare&st.s=1&st.comments=DESC&st._surl=URL" target="_blank" onclick="return Share.me(this);" class="presentation__socials-item">
                         <img src="img/socials/white/OK_white.png" alt="Поделиться через Одноклассники">
                     </a>
-                    <a href="" class="presentation__socials-item">
+                    <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Ffiddle.jshell.net%2F_display%2F&text=TITLE&url=URL" target="_blank" onclick="return Share.me(this)" class="presentation__socials-item">
                         <img src="img/socials/white/Twitter_white.png" alt="Поделиться через Твиттер">
                     </a>
                 </div>
