--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="styles/max-life.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://www.youtube.com/player_api"></script>
+    <script src="src/scroll.js"></script>
     <script src="css/powder/__canvas/powder__canvas.js"></script>
     <script src="css/page-wrapper/product/product-main/__product-image/product-main__product-image.js"></script>
     <script src="css/presentation/presentation-main/__to-ingredients/presentation__to-ingredients.js"></script>
