--- a/product.html
+++ b/product.html
@@ -69,6 +69,104 @@
     <div class="powder">
         <canvas class="powder__canvas powder__canvas--hidden"></canvas>
     </div>
+    <div class="ingredients">
+        <div class="ingredients-main">
+            <div class="ingredients__description">
+                <div class="ingredients__logo">
+                    <img src="img/logo.png" alt="Herbalife">
+                </div>
+                <div class="ingredients__hint">
+                    <h2 class="ingredients__hint-text">КЛИКНИТЕ НА ИНГРИДИЕНТ И УЗНАЙТЕ О ЕГО ПРЕИМУЩЕСТВАХ</h2>
+                    <img src="img/arrow_ingredients.png" alt="стрелка">
+                </div>
+                <div class="ingredients__names">
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/1.png" alt="1">
+                        <h3>Шпинат</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/2.png" alt="2">
+                        <h3>Кейл</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/3.png" alt="3">
+                        <h3>Брокколи</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/4.png" alt="4">
+                        <h3>Проростки пшеницы</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/5.png" alt="5">
+                        <h3>Проростки ячменя</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/6.png" alt="6">
+                        <h3>Зелёные водоросли спирулина</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/7.png" alt="7">
+                        <h3>Зелёные водоросли хлорелла</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/8.png" alt="8">
+                        <h3>Имбирь</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/9.png" alt="9">
+                        <h3>Куркума</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/10.png" alt="10">
+                        <h3>Семяна льна</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/11.png" alt="11">
+                        <h3>Овсянные пищевые волокна</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/12.png" alt="12">
+                        <h3>Яблочные пищевые волокна</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/13.png" alt="13">
+                        <h3>Порошок банана</h3>
+                    </div>
+                    <div class="ingredients__names-item">
+                        <img src="img/numbers/14.png" alt="14">
+                        <h3>Экстракт календулы</h3>
+                    </div>
+                </div>
+                <div class="ingredients__links">
+                    <div class="ingredients__socials">
+                        <a href="https://www.facebook.com/HerbalifeRSM" class="ingredients__socials-item">
+                            <img src="img/socials/black/Facebook_black.png" alt="Ссылка на Фейсбук">
+                        </a>
+                        <a href="https://vk.com/herbalifeofficial" class="ingredients__socials-item">
+                            <img src="img/socials/black/VK_black.png" alt="Ссылка на Вконтакте">
+                        </a>
+                        <a href="https://ok.ru/herbalifeofficial" class="ingredients__socials-item">
+                            <img src="img/socials/black/OK_black.png" alt="Ссылка на Однокласники">
+                        </a>
+                        <a href="https://www.instagram.com/herbalife_rsm/" class="ingredients__socials-item">
+                            <img src="img/socials/black/Instagram_black.png" alt="Ссылка на Инстаграмм">
+                        </a>
+                        <a href="https://www.youtube.com/user/HerbalifeRus" class="ingredients__socials-item">
+                            <img src="img/socials/black/youtube_black.png" alt="Ссылка на Ютуб">
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="ingredients__show">
+                <div class="ingredients__numbers">
+                    <div class="ingredients__numbers-item">
+                        <img src="img/empty-number.png" alt="1">
+                        <p>10</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="presentation presentation--hidden">
         <div class="presentation-main">
             <div class="presentation__video">
