--- a/product.html
+++ b/product.html
@@ -159,9 +159,89 @@
             </div>
             <div class="ingredients__show">
                 <div class="ingredients__numbers">
-                    <div class="ingredients__numbers-item">
-                        <img src="img/empty-number.png" alt="1">
-                        <p>10</p>
+                    <div class="ingredients__numbers-container number-1">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="1">
+                            <p class="ingredients__number">1</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-2">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="2">
+                            <p class="ingredients__number">2</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-3">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="3">
+                            <p class="ingredients__number">3</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-4">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="4">
+                            <p class="ingredients__number">4</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-5">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="5">
+                            <p class="ingredients__number">5</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-6">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="6">
+                            <p class="ingredients__number">6</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-7">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="7">
+                            <p class="ingredients__number">7</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-8">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="8">
+                            <p class="ingredients__number">8</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-9">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="9">
+                            <p class="ingredients__number">9</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-10">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="10">
+                            <p class="ingredients__number">10</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-11">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="11">
+                            <p class="ingredients__number">11</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-12">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="12">
+                            <p class="ingredients__number">12</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-13">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="13">
+                            <p class="ingredients__number">13</p>
+                        </div>
+                    </div>
+                    <div class="ingredients__numbers-container number-14">
+                        <div class="ingredients__numbers-item">
+                            <img class="ingredients__number-image" src="img/filled-number.png" alt="14">
+                            <p class="ingredients__number">14</p>
+                        </div>
                     </div>
                 </div>
             </div>
