--- a/product.html
+++ b/product.html
@@ -6,10 +6,12 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://www.youtube.com/player_api"></script>
     <script src="src/scroll.js"></script>
+    <script src="src/main.js"></script>
     <script src="css/powder/__canvas/powder__canvas.js"></script>
     <script src="css/page-wrapper/product/product-main/__product-image/product-main__product-image.js"></script>
     <script src="css/presentation/presentation-main/__to-ingredients/presentation__to-ingredients.js"></script>
     <script src="css/presentation/presentation-main/__video/presentation__video.js"></script>
+    <script src="css/ingredients/ingredients-main/__names-item/ingredients__names-item.js"></script>
 </head>
 <body>
     <div class="page-wrapper">
@@ -69,7 +71,7 @@
     <div class="powder">
         <canvas class="powder__canvas powder__canvas--hidden"></canvas>
     </div>
-    <div class="ingredients">
+    <div class="ingredients ingredients--hidden">
         <div class="ingredients-main">
             <div class="ingredients__description">
                 <div class="ingredients__logo">
