--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
     <script src="css/presentation/presentation-main/__video/presentation__video.js"></script>
     <script src="css/ingredients/ingredients-main/__names-item/ingredients__names-item.js"></script>
 </head>
-<body>
+<body class="product-body">
     <div class="page-wrapper">
         <div class="product">
             <div class="product-main">
@@ -75,7 +75,7 @@
         <div class="ingredients-main">
             <div class="ingredients__description">
                 <div class="ingredients__logo">
-                    <img src="img/logo.png" alt="Herbalife">
+                    <a href="https://herbalife.ru"><img src="img/logo.png" alt="Herbalife"></a>
                 </div>
                 <div class="ingredients__hint">
                     <h2 class="ingredients__hint-text">КЛИКНИТЕ НА ИНГРИДИЕНТ И УЗНАЙТЕ О ЕГО ПРЕИМУЩЕСТВАХ</h2>
