--- a/product.html
+++ b/product.html
@@ -68,8 +68,8 @@
             </div>
         </div>
     </div>
-    <div class="powder">
-        <canvas class="powder__canvas powder__canvas--hidden"></canvas>
+    <div class="powder powder--hidden">
+        <canvas class="powder__canvas"></canvas>
     </div>
     <div class="ingredients ingredients--hidden">
         <div class="ingredients-main">
