--- a/product.html
+++ b/product.html
@@ -2,6 +2,7 @@
 <head>
     <title>Грин Макс Select</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="styles/max-life.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://www.youtube.com/player_api"></script>
@@ -27,17 +28,19 @@
                 </div>
                 <div class="product-main__description">
                     <div class="product-main__title">
-                        <h1>Что такое ГРИН МАКС Select?</h1>
+                        <h1>Что такое<br> ГРИН МАКС Select?</h1>
                     </div>
-                    <div class="product-main__comment">
-                        <p>Открой и увидишь своими глазами!</p>
-                    </div>
-                    <div class="product-main__notification">
-                        <div class="product-main__arrow">
-                            <img src="img/arrow.png" alt="Стрелка указывающая на продукт">
+                    <div class="product-main__call">
+                        <div class="product-main__comment">
+                            <p>Открой и увидишь своими глазами!</p>
                         </div>
-                        <div class="product-main__text">
-                            <p>Нажми на банку</p>
+                        <div class="product-main__notification">
+                            <div class="product-main__arrow">
+                                <img src="img/arrow.png" alt="Стрелка указывающая на продукт">
+                            </div>
+                            <div class="product-main__text">
+                                <p>Нажми на банку</p>
+                            </div>
                         </div>
                     </div>
                 </div>
