--- a/product.html
+++ b/product.html
@@ -264,7 +264,7 @@
                             <img src="img/repeat.png" alt="Вернуться к ингридиентам">
                         </div>
                         <div class="presentation__repeat-title">
-                            <h2>К ИНГРИДИЕНТАМ</h2>
+                            <h2>К ИНГРЕДИЕНТАМ</h2>
                         </div>
                     </div>
                     <div class="presentation__to-main-page">
