--- a/product.html
+++ b/product.html
@@ -82,7 +82,9 @@
                 </div>
                 <div class="ingredients__hint">
                     <h2 class="ingredients__hint-text">КЛИКНИТЕ НА ИНГРИДИЕНТ И УЗНАЙТЕ О ЕГО ПРЕИМУЩЕСТВАХ</h2>
-                    <img src="img/arrow_ingredients.png" alt="стрелка">
+                    <div class="ingredients__arrow">
+                        <img src="img/arrow_ingredients.png" alt="стрелка">
+                    </div>
                 </div>
                 <div class="ingredients__names">
                     <div class="ingredients__names-item">
